Password hashing, autoscrolling, loading, window icon, fontsizes, etc

--- a/ComeX.WPF/MainWindow.xaml
+++ b/ComeX.WPF/MainWindow.xaml
@@ -11,6 +11,7 @@
         d:DataContext="{d:DesignInstance vm:MainViewModel}"
         mc:Ignorable="d"
         Title="ComeX"
+        Icon="Resources/Images/logo3.png"
         MinHeight="650"
         Height="{Binding WindowHeight}"
         MinWidth="{Binding WindowMinWidth}"
