--- a/ComeX.WPF/UserControls/MessageUserControl.xaml
+++ b/ComeX.WPF/UserControls/MessageUserControl.xaml
@@ -59,6 +59,7 @@
                 <Style TargetType="{x:Type Label}">
                     <Setter Property="Foreground" Value="{StaticResource LightBlue2}" />
                     <Setter Property="VerticalAlignment" Value="Center" />
+                    <Setter Property="FontSize" Value="14" />
                 </Style>
             </WrapPanel.Resources>
             <Label x:Name="ReplyLabel" Content="Replied to: " />
@@ -76,16 +77,17 @@
                    VerticalAlignment="Center">
             <WrapPanel.Resources>
                 <Style TargetType="{x:Type TextBlock}">
-                    <Setter Property="Margin" Value="0,0,10,0" />
-                    <Setter Property="VerticalAlignment" Value="Center" />
+                        <Setter Property="Margin"
+                                Value="5,0,10,0" />
+                        <Setter Property="VerticalAlignment" Value="Center" />
                 </Style>
             </WrapPanel.Resources>
             <TextBlock x:Name="AuthorText"
-                       FontSize="16"
-                       Foreground="{StaticResource LightBlue1}"
+                       FontSize="18"
+                       Foreground="{StaticResource Orange1}"
                        Text="{Binding MessageAuthor}"/>
             <TextBlock x:Name="DateText"                                                
-                       FontSize="12"
+                       FontSize="14"
                        Foreground="{StaticResource LightBlue2}"
                        Text="{Binding MessageDateTime}"/>
         </WrapPanel>
@@ -110,6 +112,7 @@
             </WrapPanel>
         </Grid>
         <TextBlock x:Name="ContentText" Grid.Row="2"
+                   FontSize="16"
                        Margin="5,0,0,0"
                        Text="{Binding MessageContent}">
         </TextBlock>
@@ -134,11 +137,11 @@
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
                             <Image x:Name="ReactionImage" Grid.Column="0"
-               Height="30"
-               Width="30"
+               Height="40"
+               Width="40"
                Source="{Binding Filename}" />
                             <Label x:Name="ReactionCounter" Grid.Column="1"
-               FontSize="11"
+               FontSize="14"
                Content="{Binding Counter}" />
                         </Grid>
                     </StackPanel>
