--- a/ComeX.WPF/Styles.xaml
+++ b/ComeX.WPF/Styles.xaml
@@ -8,6 +8,7 @@
     <Brush x:Key="LightBlue1">#D7E3EA</Brush>
     <Brush x:Key="LightBlue2">#A0B1CF</Brush>
     <Brush x:Key="Blue1">#81D5EF</Brush>
+    <Brush x:Key="Orange1">#DF8947</Brush>
 
     <FontFamily x:Key="DefaultFont">Calibri</FontFamily>
     <FontFamily x:Key="HeaderFont">./Resources/Fonts/Nunito-Medium.ttf#Nunito Regular</FontFamily>
@@ -21,7 +22,7 @@
 
     <Style x:Key="DefaultHeaderTextBlockStyle" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="{StaticResource DefaultFont}"/>
-        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontSize" Value="20"/>
         <Setter Property="Foreground" Value="{StaticResource LightBlue1}"/>
         <Setter Property="Background" Value="{x:Null}"/>
     </Style>
