--- a/ComeX.WPF/UserControls/CreateSurveyAnswerUserControl.xaml
+++ b/ComeX.WPF/UserControls/CreateSurveyAnswerUserControl.xaml
@@ -17,8 +17,8 @@
           Height="33"
           Margin="2,2,2,2">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="315"/>
-            <ColumnDefinition Width="30" />
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="40" />
         </Grid.ColumnDefinitions>
         <Rectangle Grid.Row="0" Fill="{StaticResource DarkBlue2}"
                        Margin="5,5,0,5"/>
@@ -41,9 +41,15 @@
                              GotFocus="RemoveAnswerPlaceholder"
                              LostFocus="AddAnswerPlaceholder" FontStyle="Normal"/>
 
-        <Button x:Name="DeleteButton" Grid.Column="1" Style="{StaticResource RoundButtonStyle}"
+        <Button x:Name="DeleteButton"
+                Grid.Column="1"
+                Style="{StaticResource RoundButtonStyle}"
                 Width="30"
                 Height="30"
-                Click="DeleteAnswer"/>
+                Click="DeleteAnswer">
+            <Button.Background>
+                <ImageBrush ImageSource="/Resources/Images/Icons/close-circle-line.png" />
+            </Button.Background>
+        </Button>
     </Grid>
 </UserControl>
