--- a/ComeX.WPF/UserControls/MessageUserControl.xaml
+++ b/ComeX.WPF/UserControls/MessageUserControl.xaml
@@ -23,7 +23,7 @@
                 </Style.Triggers>
             </Style>
 
-            <Style x:Key="HoverButtonStyle" TargetType="Button">
+            <Style x:Key="HoverButtonStyle" TargetType="Button" BasedOn="{StaticResource RoundButtonStyle}">
                 <Setter Property="Visibility" Value="Hidden"/>
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding ElementName=MessageGrid, Path=IsMouseOver}" Value="True">
@@ -46,7 +46,7 @@
         </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition x:Name="ReplyRow" ></RowDefinition>
-            <RowDefinition x:Name="AuthorDateRow" Height="20"></RowDefinition>
+            <RowDefinition x:Name="AuthorDateRow" Height="24"></RowDefinition>
             <RowDefinition x:Name="ContentRow"></RowDefinition>
             <RowDefinition x:Name="EmojiRow"></RowDefinition>
         </Grid.RowDefinitions>
@@ -99,16 +99,24 @@
                 <WrapPanel.Resources>
                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource HoverButtonStyle}">
                         <Setter Property="Margin" Value="0,0,10,0" />
+                        <Setter Property="Height" Value="24" />
+                        <Setter Property="Width" Value="24" />
                         <Setter Property="VerticalAlignment" Value="Center" />
                     </Style>
                 </WrapPanel.Resources>
 
                 <Button x:Name="ReplyButton"
-                        Content="R"
-                        Command="{Binding SetReplyCommand}"/>
+                        Command="{Binding SetReplyCommand}">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/Resources/Images/Icons/reply-line.png" />
+                    </Button.Background>
+                </Button>
                 <Button x:Name="EmojiButton"
-                        Content="E"
-                        Command="{Binding ReactionCommand}"/>
+                        Command="{Binding ReactionCommand}">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/Resources/Images/Icons/heart-add-line.png" />
+                    </Button.Background>
+                </Button>
             </WrapPanel>
         </Grid>
         <TextBlock x:Name="ContentText" Grid.Row="2"
