--- a/ComeX.WPF/Views/JoinServerWindow.xaml
+++ b/ComeX.WPF/Views/JoinServerWindow.xaml
@@ -63,32 +63,29 @@
                 <Rectangle x:Name="Placeholder"
                        Grid.Row="0"
                        Margin="16,13,0,5"
-                       Height="23"
-                       Width="141"
+                       Height="22"
+                       Width="194"
                        HorizontalAlignment="Left"
                        VerticalAlignment="Top">
                 <Rectangle.Fill>
                     <ImageBrush ImageSource="../Resources/Images/Placeholders/urlPlaceholder.jpg" />
                 </Rectangle.Fill>
             </Rectangle>
-            <TextBox x:Name="UrlTextBox"
-                     Grid.Row="0"
-                     Template="{StaticResource BorderTextBoxTemplate}"
-                     BorderBrush="{Binding UrlBoxBorder}"
-                     Margin="10,10,10,5"
-                     Height="30"
-                     FontSize="16"
-                     BorderThickness="4"
-                     Foreground="{StaticResource LightBlue2}"
-                     CaretBrush="{StaticResource LightBlue2}"
-                     GotFocus="RemoveUrlPlaceholder"
-                     LostFocus="AddUrlPlaceholder"
-                     Text="{Binding Url}"
-                         FontStyle="Italic">
-                <TextBox.Background>
-                    <ImageBrush />
-                </TextBox.Background>
-            </TextBox>
+                <TextBox x:Name="UrlTextBox"
+                         Grid.Row="0"
+                         Template="{StaticResource BorderTextBoxTemplate}"
+                         BorderBrush="{Binding UrlBoxBorder}"
+                         Margin="10,10,10,5"
+                         Height="30"
+                         FontSize="16"
+                         BorderThickness="4"
+                         Foreground="{StaticResource LightBlue2}"
+                         CaretBrush="{StaticResource LightBlue2}"
+                         Background="{x:Null}"
+                         GotFocus="RemoveUrlPlaceholder"
+                         LostFocus="AddUrlPlaceholder"
+                         Text="{Binding Url}">
+                </TextBox>
 
             <Button x:Name="JoinServerButton"
                     Grid.Row="1"
