--- a/ComeX.WPF/UserControls/ServerUserControl.xaml
+++ b/ComeX.WPF/UserControls/ServerUserControl.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:ComeX.WPF.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid x:Name="Server" Height="40" Width="100">
+    <Grid x:Name="Server" Width="90">
         <Grid.Resources>
             <ResourceDictionary>
                 <ResourceDictionary.MergedDictionaries>
@@ -24,7 +24,11 @@
 
         <Button x:Name="ServerNameButton"
                 Style="{StaticResource RoomNameButtonStyle}"
-                Content="{Binding Name}"
-                Command="{Binding ChangeServerCommand}"/>
+                Width="90"
+                Margin="0,0,0,10"
+                Command="{Binding ChangeServerCommand}">
+            <TextBlock Text="{Binding Name}"
+                       TextWrapping="Wrap" />
+        </Button>
     </Grid>
 </UserControl>
